# Video-Replacement

./: .gitignore  CMakeLists.txt  README.md  WavReader.cpp  WavReader.h  detect_ae.cpp  detect_ae.h  detect_hrc.cpp  detect_hrc.h  detect_mcdonald.cpp  detect_mcdonald.h  detect_nfl.cpp  detect_nfl.h  detect_starbuck.cpp  detect_starbuck.h  detect_subway.cpp  detect_subway.h  detect_subway_v2.cpp  detect_subway_v2.h  main.cpp  play_rgb.cpp  read_rgb.cpp  read_rgb_d1.cpp  read_rgb_d11.cpp  read_rgb_d2.cpp  read_rgb_d3.cpp  read_rgb_dt.cpp
VideoPlayer/src/: Main.java  PlayRgbVideo.java  PlaySound.java  PlayWaveException.java  VideoComponent.java
